@@ -112,9 +112,8 @@ class PnExtRegPrvtClientTest extends AbstractTestConfiguration {
 
         // Then
         assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("id2", result.get(0));
-        assertEquals("id3", result.get(1));
+        assertEquals(1, result.size());
+        assertEquals("[\"id2\",\"id3\"]", result.getFirst());
     }
 
 
